[update] styles, implemented css modules and some postcss plugins

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
 	"name": "player",
 	"main": [],
 	"version": "0.0.1",
-	"description": "Web Player",
+	"description": "player",
 	"authors": [
 		"Diego Rayo"
 	],
