[update] player component and app theme

--- a/config.eslint.json
+++ b/config.eslint.json
@@ -32,6 +32,7 @@
 		"linebreak-style": 0,
 		"max-len": 0,
 		"no-console": 0,
+		"no-param-reassign": 1,
 		"no-restricted-syntax": 1,
 		"no-tabs": 0,
 		"padded-blocks": 0,
