--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-  "name": "player",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "webpack -d --watch --colors"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.17.0",
-    "connect-history-api-fallback": "0.0.5",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-loader": "^1.6.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-bootlint": "^0.6.4",
-    "gulp-bower-files": "~0.1.11",
-    "gulp-concat": "~2.1.7",
-    "gulp-csslint": "~0.1.3",
-    "gulp-embedlr": "~0.5.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-htmlhint": "^0.3.0",
-    "gulp-htmlmin": "~0.1.2",
-    "gulp-inject": "~0.4.1",
-    "gulp-less": "^3.0.3",
-    "gulp-livereload": "~1.2.0",
-    "gulp-load-plugins": "~0.4.0",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-rename": "~1.1.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-replace-task": "^0.11.0",
-    "gulp-run-sequence": "^0.3.2",
-    "gulp-serve": "~0.1.1",
-    "gulp-uglify": "~0.2.1",
-    "gulp-util": "^3.0.7",
-    "lazypipe": "~0.2.1",
-    "postcss-calc": "^5.3.1",
-    "postcss-color-function": "^2.0.1",
-    "postcss-custom-properties": "^5.0.1",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
-    "postcss-math": "0.0.5",
-    "postcss-mixins": "^5.4.1",
-    "postcss-modules": "^0.6.3",
-    "postcss-modules-values": "^1.2.2",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^3.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "firebase": "^3.6.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
-  }
+	"name": "player",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "webpack -d --watch --colors"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.16.0",
+		"babel-core": "^6.17.0",
+		"babel-loader": "^6.2.5",
+		"babel-plugin-syntax-jsx": "^6.13.0",
+		"babel-preset-es2015": "^6.9.0",
+		"babel-preset-latest": "^6.16.0",
+		"babel-preset-react": "^6.16.0",
+		"babel-preset-stage-2": "^6.17.0",
+		"connect-history-api-fallback": "0.0.5",
+		"css-loader": "^0.25.0",
+		"eslint": "^3.8.1",
+		"eslint-config-airbnb": "^12.0.0",
+		"eslint-loader": "^1.6.0",
+		"eslint-plugin-import": "^1.16.0",
+		"eslint-plugin-jsx-a11y": "^2.2.3",
+		"eslint-plugin-react": "^6.4.1",
+		"gulp": "^3.9.0",
+		"gulp-autoprefixer": "^2.3.1",
+		"gulp-babel": "^6.1.2",
+		"gulp-bootlint": "^0.6.4",
+		"gulp-bower-files": "~0.1.11",
+		"gulp-concat": "~2.1.7",
+		"gulp-csslint": "~0.1.3",
+		"gulp-embedlr": "~0.5.2",
+		"gulp-eslint": "^3.0.1",
+		"gulp-htmlhint": "^0.3.0",
+		"gulp-htmlmin": "~0.1.2",
+		"gulp-inject": "~0.4.1",
+		"gulp-less": "^3.0.3",
+		"gulp-livereload": "~3.8.1",
+		"gulp-load-plugins": "~0.4.0",
+		"gulp-minify-css": "^1.2.4",
+		"gulp-rename": "~1.1.0",
+		"gulp-replace": "^0.5.4",
+		"gulp-replace-task": "^0.11.0",
+		"gulp-run-sequence": "^0.3.2",
+		"gulp-serve": "~0.1.1",
+		"gulp-uglify": "~0.2.1",
+		"gulp-util": "^3.0.7",
+		"postcss-calc": "^5.3.1",
+		"postcss-color-function": "^2.0.1",
+		"postcss-custom-properties": "^5.0.1",
+		"postcss-import": "^9.1.0",
+		"postcss-loader": "^1.2.2",
+		"postcss-math": "0.0.5",
+		"postcss-mixins": "^5.4.1",
+		"postcss-modules": "^0.6.3",
+		"postcss-modules-values": "^1.2.2",
+		"postcss-nested": "^1.0.0",
+		"postcss-simple-vars": "^3.0.0",
+		"style-loader": "^0.13.1",
+		"webpack": "^1.13.2",
+		"webpack-dev-server": "^1.16.2"
+	},
+	"dependencies": {
+		"clean-css": "^4.0.3",
+		"firebase": "^3.6.0",
+		"react": "^15.3.2",
+		"react-dom": "^15.3.2",
+		"react-router": "^3.0.0"
+	}
 }
