--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
 		"gulp": "^3.9.0",
 		"gulp-autoprefixer": "^2.3.1",
 		"gulp-babel": "^6.1.2",
-		"gulp-bootlint": "^0.6.4",
 		"gulp-bower-files": "~0.1.11",
 		"gulp-concat": "~2.1.7",
 		"gulp-csslint": "~0.1.3",
@@ -34,7 +33,6 @@
 		"gulp-htmlhint": "^0.3.0",
 		"gulp-htmlmin": "~0.1.2",
 		"gulp-inject": "~0.4.1",
-		"gulp-less": "^3.0.3",
 		"gulp-livereload": "~3.8.1",
 		"gulp-load-plugins": "~0.4.0",
 		"gulp-minify-css": "^1.2.4",
@@ -47,6 +45,7 @@
 		"gulp-util": "^3.0.7",
 		"postcss-calc": "^5.3.1",
 		"postcss-color-function": "^2.0.1",
+		"postcss-css-variables": "^0.6.0",
 		"postcss-custom-properties": "^5.0.1",
 		"postcss-import": "^9.1.0",
 		"postcss-loader": "^1.2.2",
