--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"gulp-serve": "~0.1.1",
 		"gulp-uglify": "~0.2.1",
 		"gulp-util": "^3.0.7",
+		"less": "^2.7.2",
+		"less-loader": "^2.2.3",
 		"postcss-calc": "^5.3.1",
 		"postcss-color-function": "^2.0.1",
 		"postcss-css-variables": "^0.6.0",
