--- a/package.json
+++ b/package.json
@@ -23,21 +23,13 @@
 		"eslint-plugin-jsx-a11y": "^2.2.3",
 		"eslint-plugin-react": "^6.4.1",
 		"gulp": "^3.9.0",
-		"gulp-autoprefixer": "^2.3.1",
-		"gulp-babel": "^6.1.2",
-		"gulp-bower-files": "~0.1.11",
-		"gulp-concat": "~2.1.7",
-		"gulp-csslint": "~0.1.3",
 		"gulp-embedlr": "~0.5.2",
 		"gulp-eslint": "^3.0.1",
 		"gulp-htmlhint": "^0.3.0",
 		"gulp-htmlmin": "~0.1.2",
-		"gulp-inject": "~0.4.1",
 		"gulp-livereload": "~3.8.1",
 		"gulp-load-plugins": "~0.4.0",
-		"gulp-minify-css": "^1.2.4",
 		"gulp-rename": "~1.1.0",
-		"gulp-replace": "^0.5.4",
 		"gulp-replace-task": "^0.11.0",
 		"gulp-run-sequence": "^0.3.2",
 		"gulp-serve": "~0.1.1",
@@ -45,26 +37,20 @@
 		"gulp-util": "^3.0.7",
 		"less": "^2.7.2",
 		"less-loader": "^2.2.3",
-		"postcss-calc": "^5.3.1",
-		"postcss-color-function": "^2.0.1",
-		"postcss-css-variables": "^0.6.0",
-		"postcss-custom-properties": "^5.0.1",
-		"postcss-import": "^9.1.0",
-		"postcss-loader": "^1.2.2",
-		"postcss-math": "0.0.5",
-		"postcss-mixins": "^5.4.1",
-		"postcss-modules": "^0.6.3",
-		"postcss-modules-values": "^1.2.2",
-		"postcss-nested": "^1.0.0",
-		"postcss-simple-vars": "^3.0.0",
 		"style-loader": "^0.13.1",
 		"webpack": "^1.13.2",
 		"webpack-dev-server": "^1.16.2"
 	},
 	"dependencies": {
 		"firebase": "^3.6.0",
+		"immutability-helper": "^2.1.1",
+		"immutable-js": "^0.3.1-6",
+		"jquery": "^3.1.1",
+		"lodash": "^4.17.4",
 		"react": "^15.3.2",
 		"react-dom": "^15.3.2",
-		"react-router": "^3.0.0"
+		"react-redux": "^5.0.2",
+		"react-router": "^3.0.0",
+		"redux": "^3.6.0"
 	}
 }
