--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "webpack -d --watch --colors"
+		"start": "SET NODE_ENV=development && webpack -d --watch --colors",
+		"build": "SET NODE_ENV=production && webpack -d && gulp build-live"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.16.0",
@@ -42,7 +43,6 @@
 	"dependencies": {
 		"firebase": "^3.6.0",
 		"immutability-helper": "^2.1.1",
-		"immutable-js": "^0.3.1-6",
 		"jquery": "^3.1.1",
 		"lodash": "^4.17.4",
 		"react": "^15.3.2",
