--- a/package.json
+++ b/package.json
@@ -4,51 +4,51 @@
 	"private": true,
 	"scripts": {
 		"start": "SET NODE_ENV=development && webpack -d --watch --colors",
-		"build": "SET NODE_ENV=production && webpack -d && gulp build-live"
+		"build": "SET NODE_ENV=production && webpack -p && gulp build-live"
 	},
 	"devDependencies": {
-		"babel-cli": "^6.16.0",
-		"babel-core": "^6.17.0",
-		"babel-loader": "^6.2.5",
-		"babel-plugin-syntax-jsx": "^6.13.0",
-		"babel-preset-es2015": "^6.9.0",
-		"babel-preset-latest": "^6.16.0",
-		"babel-preset-react": "^6.16.0",
-		"babel-preset-stage-2": "^6.17.0",
-		"connect-history-api-fallback": "0.0.5",
-		"css-loader": "^0.25.0",
-		"eslint": "^3.8.1",
-		"eslint-config-airbnb": "^12.0.0",
-		"eslint-loader": "^1.6.0",
-		"eslint-plugin-import": "^1.16.0",
-		"eslint-plugin-jsx-a11y": "^2.2.3",
-		"eslint-plugin-react": "^6.4.1",
-		"gulp": "^3.9.0",
-		"gulp-embedlr": "~0.5.2",
-		"gulp-htmlhint": "^0.3.0",
-		"gulp-htmlmin": "~0.1.2",
-		"gulp-livereload": "~3.8.1",
-		"gulp-load-plugins": "~0.4.0",
-		"gulp-rename": "~1.1.0",
-		"gulp-replace-task": "^0.11.0",
-		"gulp-run-sequence": "^0.3.2",
-		"gulp-serve": "~0.1.1",
-		"gulp-uglify": "~0.2.1",
-		"gulp-util": "^3.0.7",
-		"less": "^2.7.2",
-		"less-loader": "^2.2.3",
-		"style-loader": "^0.13.1",
-		"webpack": "^1.13.2"
+		"babel-cli": "",
+		"babel-core": "",
+		"babel-loader": "",
+		"babel-plugin-syntax-jsx": "",
+		"babel-preset-es2015": "",
+		"babel-preset-latest": "",
+		"babel-preset-react": "",
+		"babel-preset-stage-2": "",
+		"connect-history-api-fallback": "",
+		"css-loader": "",
+		"eslint": "",
+		"eslint-config-airbnb": "",
+		"eslint-loader": "",
+		"eslint-plugin-import": "",
+		"eslint-plugin-jsx-a11y": "",
+		"eslint-plugin-react": "",
+		"gulp": "",
+		"gulp-connect": "^5.0.0",
+		"gulp-embedlr": "",
+		"gulp-htmlhint": "",
+		"gulp-htmlmin": "",
+		"gulp-livereload": "",
+		"gulp-load-plugins": "",
+		"gulp-rename": "",
+		"gulp-replace-task": "",
+		"gulp-run-sequence": "",
+		"gulp-util": "",
+		"less": "",
+		"less-loader": "",
+		"style-loader": "",
+		"webpack": ""
 	},
 	"dependencies": {
-		"firebase": "^3.6.0",
-		"immutability-helper": "^2.1.1",
-		"jquery": "^3.1.1",
+		"firebase": "",
+		"immutability-helper": "",
+		"jquery": "",
 		"lodash": "^4.17.4",
-		"react": "^15.3.2",
-		"react-dom": "^15.3.2",
-		"react-redux": "^5.0.2",
+		"react": "",
+		"react-dom": "",
+		"react-redux": "",
 		"react-router": "^3.0.0",
-		"redux": "^3.6.0"
+		"redux": "",
+		"redux-saga": "^0.14.3"
 	}
 }
