[add] inmutability-helper lib, improved reducers and add .editorconfig file

--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-	"name": "player",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "SET NODE_ENV=development && webpack -d --watch --colors",
-		"build": "SET NODE_ENV=production && webpack -p && gulp build-live"
-	},
-	"devDependencies": {
-		"babel-cli": "",
-		"babel-core": "",
-		"babel-loader": "",
-		"babel-plugin-syntax-jsx": "",
-		"babel-preset-es2015": "",
-		"babel-preset-latest": "",
-		"babel-preset-react": "",
-		"babel-preset-stage-2": "",
-		"connect-history-api-fallback": "",
-		"css-loader": "",
-		"eslint": "",
-		"eslint-config-airbnb": "",
-		"eslint-loader": "",
-		"eslint-plugin-import": "",
-		"eslint-plugin-jsx-a11y": "",
-		"eslint-plugin-react": "",
-		"gulp": "",
-		"gulp-connect": "^5.0.0",
-		"gulp-embedlr": "",
-		"gulp-htmlhint": "",
-		"gulp-htmlmin": "",
-		"gulp-livereload": "",
-		"gulp-load-plugins": "",
-		"gulp-rename": "",
-		"gulp-replace-task": "",
-		"gulp-run-sequence": "",
-		"gulp-util": "",
-		"less": "",
-		"less-loader": "",
-		"style-loader": "",
-		"webpack": ""
-	},
-	"dependencies": {
-		"firebase": "",
-		"immutability-helper": "",
-		"jquery": "",
-		"lodash": "^4.17.4",
-		"react": "",
-		"react-dom": "",
-		"react-redux": "",
-		"react-router": "^3.0.0",
-		"redux": "",
-		"redux-saga": "^0.14.3"
-	}
+  "name": "player",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "SET NODE_ENV=development && webpack -d --watch --colors",
+    "build": "SET NODE_ENV=production && webpack -p && gulp build-live"
+  },
+  "devDependencies": {
+    "babel-cli": "",
+    "babel-core": "",
+    "babel-loader": "",
+    "babel-plugin-syntax-jsx": "",
+    "babel-preset-es2015": "",
+    "babel-preset-latest": "",
+    "babel-preset-react": "",
+    "babel-preset-stage-2": "",
+    "connect-history-api-fallback": "",
+    "css-loader": "",
+    "eslint": "",
+    "eslint-config-airbnb": "",
+    "eslint-loader": "",
+    "eslint-plugin-import": "",
+    "eslint-plugin-jsx-a11y": "",
+    "eslint-plugin-react": "",
+    "gulp": "",
+    "gulp-connect": "^5.0.0",
+    "gulp-embedlr": "",
+    "gulp-htmlhint": "",
+    "gulp-htmlmin": "",
+    "gulp-livereload": "",
+    "gulp-load-plugins": "",
+    "gulp-rename": "",
+    "gulp-replace-task": "",
+    "gulp-run-sequence": "",
+    "gulp-util": "",
+    "less": "",
+    "less-loader": "",
+    "style-loader": "",
+    "webpack": ""
+  },
+  "dependencies": {
+    "firebase": "^3.7.2",
+    "immutability-helper": "^2.1.2",
+    "jquery": "^3.2.0",
+    "lodash": "^4.17.4",
+    "react": "",
+    "react-dom": "",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.0",
+    "redux": "",
+    "redux-saga": "^0.14.3"
+  }
 }
