--- a/config.eslint.json
+++ b/config.eslint.json
@@ -20,6 +20,7 @@
 		"capitalized-comments": 0,
 		"class-methods-use-this": 0,
 		"comma-dangle": 0,
+		"consistent-return": 1,
 		"dot-location": 0,
 		"eol-last": 0,
 		"import/extensions": 0,
