[add] plugin to extract css from js file

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "",
     "eslint-plugin-jsx-a11y": "",
     "eslint-plugin-react": "",
+    "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "",
     "gulp-connect": "^5.0.0",
     "gulp-embedlr": "",
@@ -30,6 +31,7 @@
     "gulp-htmlmin": "",
     "gulp-livereload": "",
     "gulp-load-plugins": "",
+    "gulp-minify-css": "^1.2.4",
     "gulp-rename": "",
     "gulp-replace-task": "",
     "gulp-run-sequence": "",
