--- a/config.eslint.json
+++ b/config.eslint.json
@@ -26,6 +26,7 @@
 		"import/extensions": 0,
 		"import/no-extraneous-dependencies": 0,
 		"import/no-unresolved": 0,
+		"import/prefer-default-export": 1,
 		"indent": [1, "tab"],
 		"jsx-a11y/no-static-element-interactions": 0,
 		"linebreak-style": 0,
@@ -34,6 +35,7 @@
 		"no-param-reassign": 1,
 		"no-restricted-syntax": 1,
 		"no-tabs": 0,
+		"no-unused-vars": 1,
 		"padded-blocks": 0,
 		"quote-props": [1, "as-needed"],
 		"react/jsx-indent": [1, "tab"],
