--- a/package.json
+++ b/package.json
@@ -7,40 +7,39 @@
     "build": "SET NODE_ENV=production && webpack -p && gulp build-live"
   },
   "devDependencies": {
-    "babel-cli": "",
-    "babel-core": "",
-    "babel-loader": "",
-    "babel-plugin-syntax-jsx": "",
-    "babel-preset-es2015": "",
-    "babel-preset-latest": "",
-    "babel-preset-react": "",
-    "babel-preset-stage-2": "",
-    "connect-history-api-fallback": "",
-    "css-loader": "",
-    "eslint": "",
-    "eslint-config-airbnb": "",
-    "eslint-loader": "",
-    "eslint-plugin-import": "",
-    "eslint-plugin-jsx-a11y": "",
-    "eslint-plugin-react": "",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
-    "gulp": "",
+    "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
-    "gulp-embedlr": "",
-    "gulp-htmlhint": "",
-    "gulp-htmlmin": "",
-    "gulp-livereload": "",
-    "gulp-load-plugins": "",
+    "gulp-embedlr": "^0.5.2",
+    "gulp-htmlhint": "^0.3.1",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "",
-    "gulp-replace-task": "",
-    "gulp-run-sequence": "",
-    "gulp-util": "",
-    "less": "",
-    "less-loader": "",
-    "postcss-less": "^0.15.0",
-    "style-loader": "",
-    "webpack": ""
+    "gulp-rename": "^1.2.2",
+    "gulp-replace-task": "^0.11.0",
+    "gulp-run-sequence": "^0.3.2",
+    "gulp-util": "^3.0.8",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.2"
   },
   "dependencies": {
     "babel-plugin-react-css-modules": "^2.6.0",
@@ -48,6 +47,8 @@
     "immutability-helper": "^2.1.2",
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
+    "player.js": "^0.0.11",
+    "plyr": "^2.0.12",
     "react": "",
     "react-dom": "",
     "react-redux": "^5.0.3",
