--- a/config.app.example.json
+++ b/config.app.example.json
@@ -1,15 +1,15 @@
 {
-	"DEV": {
+	"development": {
 		"dest_path": "./build/assets/player",
-		"environment": "DEV",
+		"environment": "development",
 		"firebase_api_key": "",
 		"firebase_auth_domain": "",
 		"firebase_database_url": "",
 		"youtube_api_key": ""
 	},
-	"LIVE": {
+	"production": {
 		"dest_path": "./../some-path/assets/player",
-		"environment": "LIVE",
+		"environment": "production",
 		"firebase_api_key": "",
 		"firebase_auth_domain": "",
 		"firebase_database_url": "",
