--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "SET NODE_ENV=development && webpack -d --watch --colors",
+    "start": "SET NODE_ENV=development && webpack-dev-server --host localhost --port 4567 --hot --content-base build/",
     "build": "SET NODE_ENV=production && webpack -p && gulp build-live"
   },
   "devDependencies": {
@@ -39,10 +39,13 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.2"
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "babel-plugin-react-css-modules": "^2.6.0",
+    "babel-polyfill": "^6.23.0",
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
     "jquery": "^3.2.0",
