--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "SET NODE_ENV=development && webpack-dev-server --hot --inline",
+    "start": "SET NODE_ENV=development && gulp build-dev && webpack-dev-server --hot --inline --colors",
     "build": "SET NODE_ENV=production && webpack -p && gulp build-live"
   },
   "devDependencies": {
@@ -11,11 +11,11 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "connect-history-api-fallback": "^1.3.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -25,38 +25,32 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-embedlr": "^0.5.2",
     "gulp-htmlhint": "^0.3.1",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
-    "gulp-replace-task": "^0.11.0",
     "gulp-run-sequence": "^0.3.2",
     "gulp-util": "^3.0.8",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "react-hot-loader": "next",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
-    "babel-plugin-react-css-modules": "^2.6.0",
-    "babel-polyfill": "^6.23.0",
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
-    "player.js": "^0.0.11",
     "plyr": "^2.0.12",
-    "react": "",
-    "react-dom": "",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
-    "redux": "",
+    "redux": "^3.6.0",
     "redux-saga": "^0.14.3"
   }
 }
