--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "SET NODE_ENV=development && gulp build-dev && webpack-dev-server --hot --inline --colors",
+    "start": "SET NODE_ENV=development && gulp build-dev && node config/webpack.config.dev.server.js",
     "build": "SET NODE_ENV=production && webpack -p && gulp build-live"
   },
   "devDependencies": {
@@ -15,7 +15,9 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "browser-sync": "^2.18.8",
     "clean-webpack-plugin": "^0.1.16",
+    "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -28,8 +30,8 @@
     "gulp-htmlhint": "^0.3.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-run-sequence": "^0.3.2",
     "gulp-util": "^3.0.8",
     "less": "^2.7.2",
@@ -38,11 +40,13 @@
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.18.0",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
+    "immutable-js": "^0.3.1-6",
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
     "plyr": "^2.0.12",
