--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-util": "^3.0.8",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "postcss-less": "^0.15.0",
     "react-hot-loader": "next",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
@@ -44,6 +45,8 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-plugin-react-css-modules": "^2.6.0",
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
     "immutable-js": "^0.3.1-6",
