--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start:all": "gulp build-dev && node config/webpack.config.dev.server.js",
-    "start": "cross-env NODE_ENV=development && npm run start:all",
+    "start": "SET NODE_ENV=development && npm run start:all",
     "build:all": "webpack -p && gulp build-live",
-    "build": "cross-env NODE_ENV=production npm run build:all"
+    "build": "SET NODE_ENV=production npm run build:all"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
