--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:all": "gulp build-dev && node config/webpack.config.dev.server.js",
     "start": "SET NODE_ENV=development && npm run start:all",
     "build:all": "webpack -p && gulp build-live",
-    "build": "SET NODE_ENV=production npm run build:all"
+    "build": "SET NODE_ENV=production && npm run build:all"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -38,7 +38,6 @@
     "gulp-util": "^3.0.8",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
-    "postcss-less": "^0.15.0",
     "react-hot-loader": "next",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
@@ -49,7 +48,6 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-plugin-react-css-modules": "^2.6.0",
-    "cross-env": "^4.0.0",
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
     "immutable-js": "^0.3.1-6",
