--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "browser-sync": "^2.18.8",
     "clean-webpack-plugin": "^0.1.16",
     "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -60,6 +60,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.14.3"
   }
 }
