--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start:all": "gulp build-dev && node config/webpack.config.dev.server.js",
-    "start": "SET NODE_ENV=development && npm run start:all",
+    "start": "cross-env NODE_ENV=development npm run start:all",
     "build:all": "webpack -p && gulp build-live",
-    "build": "SET NODE_ENV=production && npm run build:all"
+    "build": "cross-env NODE_ENV=production npm run build:all"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -20,6 +20,7 @@
     "browser-sync": "^2.18.8",
     "clean-webpack-plugin": "^0.1.16",
     "connect-history-api-fallback": "^1.3.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -47,11 +48,9 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
-    "axios": "^0.16.1",
     "classnames": "^2.2.5",
     "firebase": "^3.7.2",
     "immutability-helper": "^2.1.2",
-    "immutable-js": "^0.3.1-6",
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
     "plyr": "^2.0.12",
@@ -59,8 +58,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.6.0",
-    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.14.3"
   }
 }
