--- a/config.eslint.json
+++ b/config.eslint.json
@@ -15,7 +15,8 @@
 		"fetch": true,
 		"jwplayer": true,
 		"Promise": true,
-		"window": true
+		"window": true,
+    "Plyr": true
 	},
 	"rules": {
 		"array-callback-return": 0,
@@ -31,7 +32,7 @@
 		"import/no-extraneous-dependencies": 0,
 		"import/no-unresolved": 0,
 		"import/prefer-default-export": 1,
-		"indent": [1, "tab"],
+		"indent": 0,
 		"jsx-a11y/no-static-element-interactions": 0,
 		"linebreak-style": 0,
 		"max-len": 0,
@@ -42,7 +43,7 @@
 		"no-unused-vars": 1,
 		"padded-blocks": 0,
 		"quote-props": [1, "as-needed"],
-		"react/jsx-indent": [1, "tab"],
+		"react/jsx-indent": 0,
 		"react/require-default-props": 1,
 		"react/forbid-prop-types": [1, {
 			"forbid": ["any"]
